Java 11 to 8. Refactoring logging and variable names. User-agent to properties.